style css added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>
         public website
     </h1>
-    <h3>about me</h3>
-    <p>my name is zishan. i am 18 years old. i live in Kushtia, Dhaka, Bangladesh. Bangladesh is very populated county. there are almost 16 coror people live in this country.</p>
+    <div class="lol"><h3>about me</h3>
+        <p>my name is zishan. i am 18 years old. i live in Kushtia, Dhaka, Bangladesh. Bangladesh is very populated county. there are almost 16 coror people live in</p></div>
 </body>
 </html>
